# voxtral.cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: patch-ggml-vulkan-f16-concat.cmake  voxtral.exports  voxtral.map
docs/: development-baseline.md  public-streaming-api.md  server-api.md  session8-findings.md  session9-findings.md
docs/architecture/: streaming-runtime.md
examples/c/: streaming.c
examples/csharp/: VoxtralServerClient.cs
examples/web/: README.md  app.js  index.html  pcm-worklet.js  style.css
include/: voxtral-stream.h  voxtral.h
server/: auth.cpp  auth.h  batch-transcription.cpp  batch-transcription.h  bounded-queue.h  engine.cpp  engine.h  gpu-lease.cpp  gpu-lease.h  http-session.cpp  http-session.h  json-protocol.cpp  json-protocol.h  logger.cpp  logger.h  main.cpp  realtime-session.cpp  realtime-session.h  server-app.cpp  server-app.h  server-config.cpp  server-config.h  wav-reader.cpp  wav-reader.h
src/: main.cpp  voxtral-c-api.cpp  voxtral-cpp.h  voxtral-internal.h  voxtral-mel.cpp  voxtral-mel.h  voxtral-stream-decoder.cpp  voxtral-stream-diagnostics.cpp  voxtral-stream-diagnostics.h  voxtral-stream-events.cpp  voxtral-stream-frontend.cpp  voxtral-stream-internal.h  voxtral-stream-telemetry.cpp  voxtral-stream.cpp  voxtral-stream.h  voxtral.cpp
tests/: public-symbols.txt
tests/c/: public_stream_api_test.c  test_public_api.c
tests/cpp/: benchmark_public_api_call.cpp  test_decoder_kv.cpp  test_encoder_incremental.cpp  test_encoder_kv.cpp  test_mel_incremental.cpp  test_stream_diagnostics.cpp  test_stream_state.cpp  voxtral_stream_test.cpp
tests/headers/: public_header_smoke.c  public_header_smoke.cpp
tests/node/: README.md  package-lock.json  package.json  vitest.config.js
tests/node/acceptance/: environment.test.js
tests/node/baseline/: encoder-kv.test.js  encoder-realtime.test.js  gpu-smoke.test.js  incremental-encoder.test.js  incremental-mel.test.js  stream-skeleton.test.js
tests/node/config/: environment.js
tests/node/helpers/: artifacts.js  audio.js  benchmark-run.js  build.js  chunks.js  exec.js  gpu-power.js  inference.js  precision-cache.js  profile-report.js  public-api.js  quality.js  remote.js  session8.js  stream.js  streaming-transport.js  wav.js
tests/node/scripts/: acceptance-baseline.js  acceptance-decoder-kv-ring.js  acceptance-encoder-kv.js  acceptance-encoder-realtime.js  acceptance-end-to-end-realtime.js  acceptance-fp16-quality.js  acceptance-incremental-adapter.js  acceptance-incremental-decoder.js  acceptance-incremental-encoder.js  acceptance-incremental-mel.js  acceptance-kv-fp16.js  acceptance-latency-eligibility.js  acceptance-precision-matrix.js  acceptance-production-lifecycle.js  acceptance-public-c-api-backpressure.js  acceptance-public-c-api.js  acceptance-real-fixtures.js  acceptance-realtime-sustained.js  acceptance-stream-events.js  acceptance-stream-skeleton.js  benchmark-encoder-scheduler.js  benchmark-hardware-ceiling.js  benchmark-incremental-unpaced.js  benchmark-pipeline-profile.js  benchmark-public-c-api-overhead.js  benchmark-realtime-pipeline.js  build-gpu.js  build-local.js  capture-baseline.js  compare-incremental-fixture.js  compare-incremental.js  probe-first-token.js  probe-fp16-divergence.js  probe-fp16-isolate.js  smoke-voxtral-server.js  sync-gpu.js  test-encoder-kv-manual.js  test-public-c-api-lifecycle.js  test-public-c-api-reuse.js  test-public-symbols.js  (+2 more)
tests/node/unit/: artifacts.test.js  audio.test.js  chunks.test.js  config.test.js  exec.test.js  inference.test.js  precision-cache.test.js  quality.test.js  remote.test.js  streaming-transport.test.js  wav.test.js
tests/server/: server_unit_test.cpp
